# c_advanced_programming

./: .gitignore  CMakeLists.txt  double_precision.cpp  perfect_number.c  perfect_number_fast.cpp  prime.cpp  sort_quick.c
